--- a/.github/workflows/build-and-push-docker-hub.yml
+++ b/.github/workflows/build-and-push-docker-hub.yml
@@ -1,9 +1,7 @@
 name: Build, Push, Ssh, Pull, Down, Up
 
-on:
-  push:
-    branches:
-      - 'staging'
+on: [push]
+
 
 jobs:
   build-and-push:
@@ -32,7 +30,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: bsignbkc/express-sample-project:staging
+          tags: Khoi231202/cicd2024:staging2
 
 
   pull-and-up:
